<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant">


    <Button
        android:id="@+id/btnVerify"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="175dp"
        android:background="@drawable/round"
        android:text="@string/Verify_normal"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="382dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="301dp"
        android:background="@drawable/round"
        android:text="@string/Send_normal"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="412dp"
        android:layout_height="58dp"
        android:layout_marginTop="672dp"
        android:layout_marginBottom="1dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="71dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="660dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="412dp"
        android:layout_height="58dp"
        android:layout_marginTop="672dp"
        android:layout_marginBottom="1dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/orbitron"
        android:text="@string/CreateAccount_normal"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="72dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="659dp"
        android:contentDescription="@string/image_ZerineLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="530dp"
        android:fontFamily="@font/orbitron"
        android:text="@string/Username_Normal"
        android:textColor="#190000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="460dp"
        android:fontFamily="@font/orbitron"
        android:text="@string/Password_Normal"
        android:textColor="#020000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"

        android:layout_marginTop="331dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="374dp"
        android:fontFamily="@font/orbitron"
        android:text="@string/reg_email"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="459dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="246dp"
        android:fontFamily="@font/orbitron"
        android:text="@string/reg_code"
        android:textColor="#0E0000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="26dp"
        android:autofillHints="username"
        android:background="@drawable/rounded_editbox"
        android:ems="10"
        android:hint="@string/Hint_EnterUser"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="323dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="366dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_editbox"
        android:ems="10"
        android:hint="@string/Hint_EnterEmail"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText6"

        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="453dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_editbox"
        android:ems="10"
        android:hint="@string/Hint_EnterPass"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="280dp"


        android:layout_height="48dp"
        android:layout_marginStart="112dp"

        android:layout_marginTop="450dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="233dp"
        android:autofillHints="code"
        android:background="@drawable/rounded_editbox"
        android:ems="10"
        android:hint="@string/Hint_Code"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegisterAccount"
        android:layout_width="183dp"
        android:layout_height="50dp"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="81dp"
        android:background="@drawable/round"
        android:text="@string/Register_Normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>